Adds cute UI and better backend
